<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sk.fmfi.listng.course</groupId>
    <artifactId>listng-course</artifactId>
    <version>1.0.0-SNAPSHOT</version><!--    TAG:listng-course Version    -->
    <packaging>pom</packaging>

    <modules>
        <module>listng-course-api</module>
        <module>listng-course-application</module>
        <module>listng-course-domain</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <listng-core.version>1.0.0-SNAPSHOT</listng-core.version><!--    TAG:listng-domain Version    -->
        <listng-infrastructure.version>1.0.0</listng-infrastructure.version><!--    TAG:listng-infrastructure Version    -->

        <springboot.version>3.0.5</springboot.version>
        <spring-cloud.version>4.0.2</spring-cloud.version>
        <hibernate.version>6.1.7.Final</hibernate.version>
        <springfox.version>3.0.0</springfox.version>
        <javax-xml.version>2.3.0</javax-xml.version>
        <postgres.version>42.5.1</postgres.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>sk.fmfi.listng</groupId>
            <artifactId>listng-infrastructure</artifactId>
        </dependency>
    </dependencies>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>sk.fmfi.listng</groupId>
                <artifactId>listng-infrastructure</artifactId>
                <version>${listng-infrastructure.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.fmfi.listng.course</groupId>
                <artifactId>listng-course-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.fmfi.listng.course</groupId>
                <artifactId>listng-course-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${javax-xml.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>${springboot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-consul-config</artifactId>
                <version>${spring-cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-consul-discovery</artifactId>
                <version>${spring-cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgres.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
